--- a/index.html
+++ b/index.html
@@ -68,8 +68,25 @@
     <!-- css -->
     <link rel="stylesheet" href="css/main.css" />
     <title>B안 JUNKY FUNKY</title>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-K9GSDJ2K");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9GSDJ2K" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- 로그인 폼 -->
     <div id="loginModal" class="modal">
       <div class="modal-content">
@@ -966,8 +983,7 @@
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
             </div>
 
-            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch">
-
+            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch" />
           </div>
 
           <!-- 2번 상품 -->
@@ -1015,8 +1031,7 @@
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="리사이클 유리팔찌" data-price="32000" />
             </div>
 
-            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch">
-
+            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch" />
           </div>
           <!-- 5번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="400">
@@ -1063,8 +1078,7 @@
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="폐목 우드 트레이" data-price="35000" />
             </div>
 
-            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch">
-
+            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch" />
           </div>
           <!-- 8번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="700">
