--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
             <p class="product-name">플라스틱 비누받침</p>
             <p class="product-price"><span class="sale-item">21,000원</span>16,500원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(11,347)</span>
             </div>
             <div class="add-to-cart">
@@ -994,7 +994,7 @@
             <p class="product-name">도자 귀걸이 반지 선물세트</p>
             <p class="product-price">56,000원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(8,856)</span>
             </div>
             <div class="add-to-cart">
@@ -1009,7 +1009,7 @@
             <p class="product-name">거북이 보틀 오프너</p>
             <p class="product-price">12,300원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(7,724)</span>
             </div>
             <div class="add-to-cart">
@@ -1024,14 +1024,14 @@
             <p class="product-name">리사이클 유리팔찌</p>
             <p class="product-price"><span class="sale-item">32,000원</span>21,000원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(6,249)</span>
             </div>
             <div class="add-to-cart">
               <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="리사이클 유리팔찌" data-price="32000" />
             </div>
 
-            <img src="images/B/icon/sale_scratch2.png" alt="스크래치 할인" class="sale-scratch" />
+            <img src="images/B/icon/sale_return.png" alt="반품 할인" class="sale-scratch" />
           </div>
           <!-- 5번 상품 -->
           <div class="product-item" data-aos="fade-up" data-aos-delay="400">
@@ -1041,7 +1041,7 @@
             <p class="product-name">헌의류 곱창밴드</p>
             <p class="product-price">7,900원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(5,237)</span>
             </div>
             <div class="add-to-cart">
@@ -1056,7 +1056,7 @@
             <p class="product-name">양말 목 체커보드백</p>
             <p class="product-price">15,000원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(3,856)</span>
             </div>
             <div class="add-to-cart">
@@ -1071,7 +1071,7 @@
             <p class="product-name">폐목 우드 트레이</p>
             <p class="product-price"><span class="sale-item">35,000원</span>28,000원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(2,261)</span>
             </div>
             <div class="add-to-cart">
@@ -1088,7 +1088,7 @@
             <p class="product-name">플라스틱 책선반</p>
             <p class="product-price">38,000원</p>
             <div class="popular-rating">
-              <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" class="rating-icon" />
+              <img src="images/B/icon/star.png" alt="별점" class="rating-icon" />
               <span>(1,832)</span>
             </div>
             <div class="add-to-cart">
@@ -1305,52 +1305,66 @@
           <div class="swiper-wrapper">
             <!-- notice1 -->
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/1920_notice1.png" alt="구독" />
-              <div class="notice-txt">
                 <p class="notice_title">정키펑키 구독 이벤트</p>
                 <p class="notice_text">구독시 첫 구매 20% 할인쿠폰 지급</p>
               </div>
             </div>
             <!-- notice2 -->
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
               <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
               <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
             </div>
+            </div>
             <!-- notice3 -->
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/1920_notice3.png" alt="구독" />
               <p class="notice_title">첫 리뷰에 포인트 두배!</p>
               <p class="notice_text">텍스트리뷰 600P, 포토리뷰 1000P 지급</p>
             </div>
+          </div>
             <!-- notice4 -->
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/notice4.png" alt="구독" />
               <p class="notice_title">나만의 소소한 재활용품</p>
               <p class="notice_text">재활용으로 소품만들어 보기</p>
             </div>
+          </div>
             <!-- notice5 -->
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/notice5.png" alt="구독" />
               <p class="notice_title">업사이클 프리마켓 오픈</p>
               <p class="notice_text">2024.11.07~11.30 진행 예정</p>
             </div>
+          </div>
             <!-- notice6 -->
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/notice6.png" alt="구독" />
               <p class="notice_title">재활용의 가치을 입히다</p>
               <p class="notice_text">유용하게 새용한 물건의 새로운 삶</p>
             </div>
+          </div>
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/notice7.png" alt="구독" />
               <p class="notice_title">신규브랜드 상품 보러가기</p>
               <p class="notice_text">정키펑키에 새로운 장인들이 왔어요~!</p>
             </div>
+          </div>
             <div class="swiper-slide notice-swiper-slide">
+              <div class="notice-txtall">
               <img src="images/B/e.banner/notice8.png" alt="구독" />
               <p class="notice_title">이것도?업사이클링!?</p>
               <p class="notice_text">말하지 않으면 새상품 같은 업사이클링</p>
             </div>
+          </div>
             <!-- 슬라이드 끝-->
           </div>
         </div>
