아이콘 변경/정렬/디테일페이지 작업중

--- a/detail-page.html
+++ b/detail-page.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-   
-
     <script src="js/detail.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/main.css" />
@@ -282,7 +280,7 @@
           <!-- 브랜드 소개 탭 내용 -->
           <div class="detile-tab-content" id="detile-brand" style="display: none">
             <div class="detile-image-brand detile-card">
-              <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="detailImage" />
+              <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="brandImage" />
             </div>
           </div>
         </div>
