3번째 동영상 추가 및 소개, 공지 영역 오류 수정

--- a/about_us.html
+++ b/about_us.html
@@ -41,18 +41,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- js -->
     <script src="js/modal.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/header.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/fix-btn.js"></script>
+    <script src="js/login.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <link rel="stylesheet" href="css/aboutus.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <title>환경을 살리는 소비 'JUNKY FUNKY!' B안</title>
+    <title>B안 소개 'JUNKY FUNKY!'</title>
     <style>
       html {
         scroll-behavior: smooth;
       }
+      
+
     </style>
   </head>
   <body>
@@ -121,10 +125,9 @@
                           </div>
                           <div class="loginBt_my">
                             <a href="#">
-                              <img src="images/A/icon/popup-icon/user_icon_my.png" alt="유저 아이콘" />
+                              <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                             </a>
                           </div>
-  
                           <!-- <div class="cartBt">
                             <a href="#">
                               <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -134,15 +137,15 @@
                         <input type="text" placeholder="입력 후 엔터" />
                       </div>
                       <ul class="side-top-menu">
-                        <li><a href="#event">이벤트</a></li>
-                        <li><a href="#popular">인기</a></li>
-                        <li><a href="#brands">브랜드</a></li>
-                        <li><a href="#review">리뷰</a></li>
+                        <li><a href="index.html#event">이벤트</a></li>
+                        <li><a href="index.html#popular">인기</a></li>
+                        <li><a href="index.html#brands">브랜드</a></li>
+                        <li><a href="index.html#review">리뷰</a></li>
                         <li><a href="about_us.html">소개</a></li>
                         <li><a href="notice.html">공지사항</a></li>
                       </ul>
                     </div>
-                    <!-- <div class="side-bottom">
+                    <div class="side-bottom">
                       <h3 class="side-bottom-title">카테고리</h3>
                       <ul class="side-bottom-menu">
                         <li>
@@ -176,13 +179,13 @@
                           </a>
                         </li>
                       </ul>
-                    </div> -->
+                    </div>
                   </div>
                 </a>
               </li>
               <li>
-                <a href="#" class="category-title">카테고리</a>
-                <div class="navi-cate">
+                <a href="index.html#material" class="category-title">카테고리</a>
+                <!-- <div class="navi-cate">
                   <div class="cate-right">
                     <ul class="depth-top">
                       <li>
@@ -217,13 +220,13 @@
                       </li>
                     </ul>
                   </div>
-                </div>
+                </div> -->
               </li>
-              <li><a href="#event">이벤트</a></li>
-              <li><a href="#popular">인기</a></li>
+              <li><a href="index.html#event">이벤트</a></li>
+              <li><a href="index.html#popular">인기</a></li>
               <!-- <li><a href="#">구독</a></li> -->
-              <li><a href="#brands">브랜드</a></li>
-              <li><a href="#review">리뷰</a></li>
+              <li><a href="index.html#brands">브랜드</a></li>
+              <li><a href="index.html#review">리뷰</a></li>
               <li><a href="about_us.html">소개</a></li>
               <li><a href="notice copy.html">공지사항</a></li>
             </ul>
@@ -251,12 +254,13 @@
                     <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                   </a>
                 </div>
-                <div class="loginBt_my" style="display: none;"> <!-- 초기에는 감춰져야 함 -->
+                <div class="loginBt_my" style="display: none">
+                  <!-- 초기에는 감춰져야 함 -->
                   <a href="#">
                     <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                   </a>
                 </div>
-  
+
                 <!-- <div class="cartBt">
                   <a href="#">
                     <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -267,12 +271,12 @@
           </div>
           <div class="header-bottom">
             <ul class="navi-bottom">
-              <li><a href="#" class="category-title">카테고리</a></li>
-              <li><a href="#event">이벤트</a></li>
-              <li><a href="#popular">인기</a></li>
+              <li><a href="index.html#material" class="category-title">카테고리</a></li>
+              <li><a href="index.html#event">이벤트</a></li>
+              <li><a href="index.html#popular">인기</a></li>
               <!-- <li><a href="#">구독</a></li> -->
-              <li><a href="#brands">브랜드</a></li>
-              <li><a href="#review">리뷰</a></li>
+              <li><a href="index.html#brands">브랜드</a></li>
+              <li><a href="index.html#review">리뷰</a></li>
               <li><a href="about_us.html">소개</a></li>
               <li><a href="notice copy.html">공지사항</a></li>
             </ul>
@@ -287,11 +291,11 @@
             <img src="images/intro/intro_main_title.png" alt="소개 로고" class="aboutLogo" />
           </div>
           <div class="about-main">
-            <div class="main-top" data-aos="fade-right" data-aos-delay="300" >
+            <div class="main-top">
               <img src="images/intro/intro_img_2.png" alt="인트로 이미지1" />
               <img src="images/intro/intro_title_1.png" alt="내용 1" />
             </div>
-            <div class="main-bottom" data-aos="fade-left" data-aos-delay="700" data-aos-offset="90">
+            <div class="main-bottom">
               <img src="images/intro/intro_title_2.png" alt="내용 2" />
               <img src="images/intro/intro_img_1.png" alt="인트로 이미지2" />
             </div>
@@ -332,7 +336,7 @@
       // AOS 초기화
       AOS.init({
         duration: 1000, // 애니메이션 지속 시간(ms)
-        once: true,      // 한번만 실행할 경우 true
+        once: true, // 한번만 실행할 경우 true
       });
     </script>
   </body>
