--- a/index.html
+++ b/index.html
@@ -265,31 +265,31 @@
               <div class="cate-right">
                 <ul class="depth-top">
                   <li>
-                    <a href="#" data-category="plastic">
+                    <a href="#material" data-category="plastic">
                       <img src="images/A/icon/submenu-icon/plastic.png" alt="소재_플라스틱 아이콘" />
                       <span>플라스틱</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="clothes">
+                    <a href="#material" data-category="clothes">
                       <img src="images/A/icon/submenu-icon/clothes.png" alt="소재_천 아이콘" />
                       <span>천</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="wood">
+                    <a href="#material" data-category="wood">
                       <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" />
                       <span>목재</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="glass">
+                    <a href="#material" data-category="glass">
                       <img src="images/A/icon/submenu-icon/glass.png" alt="소재_유리 아이콘" />
                       <span>유리</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="etc">
+                    <a href="#material" data-category="etc">
                       <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" />
                       <span>기타</span>
                     </a>
@@ -314,12 +314,16 @@
                             <img src="images/A/icon/popup-icon/serach_bar.svg" alt="서치 아이콘" class="search_icon" />
                           </a>
                         </div>
-                        <!-- <div class="loginBt">
+                        <div class="loginBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
-                            
                           </a>
-                        </div> -->
+                        </div>
+                        <div class="loginBt_my">
+                          <a href="#">
+                            <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
+                          </a>
+                        </div>
                         <!-- <div class="cartBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -333,10 +337,10 @@
                       <li><a href="#popular">인기</a></li>
                       <li><a href="#brands">브랜드</a></li>
                       <li><a href="#review">리뷰</a></li>
-                      <!-- <li><a href="notice.html">공지사항</a></li> -->
+                      <li><a href="about_us.html">소개</a></li>
+                      <li><a href="notice copy.html">공지사항</a></li>
                     </ul>
                   </div>
-                  <!-- <hr /> -->
                   <div class="side-bottom">
                     <h3 class="side-bottom-title">카테고리</h3>
                     <ul class="side-bottom-menu">
@@ -441,16 +445,17 @@
                   <input type="text" id="searchMBInput" placeholder="모바일 검색어를 입력하세요" />
                 </a>
               </div>
-              <!-- <div class="loginBt">
+              <div class="loginBt">
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                 </a>
               </div>
-              <div class="loginBt_my">
+              <div class="loginBt_my" style="display: none;"> <!-- 초기에는 감춰져야 함 -->
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                 </a>
-              </div> -->
+              </div>
+
               <!-- <div class="cartBt">
                 <a href="#">
                   <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -483,16 +488,16 @@
                 <source src="/video/video1.mp4" type="video/mp4" />
               </video>
             </div>
+            <div class="swiper-slide white">
+              <video playsinline loop muted>
+                <source src="/video/video3.mp4" type="video/mp4" />
+              </video>
+            </div>
             <div class="swiper-slide mosgreen">
               <video playsinline loop muted>
                 <source src="/video/video2.mp4" type="video/mp4" />
               </video>
             </div>
-            <!-- <div class="swiper-slide white">
-                <video loop muted>
-                  <source src="/video/video3.mp4" type="video/mp4" />
-                </video>
-              </div> -->
           </div>
         </div>
       </div>
@@ -671,7 +676,7 @@
               </a>
             </div>
           </div>
-          <div class="material-main">
+          <div class="material-main" id="material">
             <!-- 플라스틱 소재 카테고리 -->
             <div class="material-goods plastic">
               <div class="material-goods-card">
