--- a/notice copy.html
+++ b/notice copy.html
@@ -52,7 +52,7 @@
     <script src="js/fix-btn.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/header.css" />
-    <title>환경을 살리는 소비 'JUNKY FUNKY!'</title>
+    <title>B안 공지 'JUNKY FUNKY!'</title>
     <style>
       html {
         scroll-behavior: smooth;
@@ -148,6 +148,13 @@
       #noticeList tr td:nth-child(2):hover {
         font-weight: bold;
       }
+
+      .navi-cate{
+        display: none !important;
+      }
+      .navi-cate.active{
+        display: none !important;
+      }
     </style>
   </head>
   <body>
@@ -157,7 +164,7 @@
         <div class="header-top">
           <ul class="head-navi">
             <div class="navi-cate">
-              <div class="cate-right">
+              <!-- <div class="cate-right">
                 <ul class="depth-top">
                   <li>
                     <a href="#material" data-category="plastic">
@@ -190,7 +197,7 @@
                     </a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </div>
             <li>
               <button class="cate-close">X</button>
@@ -216,10 +223,9 @@
                         </div>
                         <div class="loginBt_my">
                           <a href="#">
-                            <img src="images/A/icon/popup-icon/user_icon_my.png" alt="유저 아이콘" />
+                            <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                           </a>
                         </div>
-
                         <!-- <div class="cartBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -229,15 +235,15 @@
                       <input type="text" placeholder="입력 후 엔터" />
                     </div>
                     <ul class="side-top-menu">
-                      <li><a href="#event">이벤트</a></li>
-                      <li><a href="#popular">인기</a></li>
-                      <li><a href="#brands">브랜드</a></li>
-                      <li><a href="#review">리뷰</a></li>
+                      <li><a href="index.html#event">이벤트</a></li>
+                      <li><a href="index.html#popular">인기</a></li>
+                      <li><a href="index.html#brands">브랜드</a></li>
+                      <li><a href="index.html#review">리뷰</a></li>
                       <li><a href="about_us.html">소개</a></li>
                       <li><a href="notice.html">공지사항</a></li>
                     </ul>
                   </div>
-                  <!-- <div class="side-bottom">
+                  <div class="side-bottom">
                     <h3 class="side-bottom-title">카테고리</h3>
                     <ul class="side-bottom-menu">
                       <li>
@@ -271,13 +277,13 @@
                         </a>
                       </li>
                     </ul>
-                  </div> -->
+                  </div>
                 </div>
               </a>
             </li>
             <li>
-              <a href="#" class="category-title">카테고리</a>
-              <div class="navi-cate">
+              <a href="index.html#material" class="category-title">카테고리</a>
+              <!-- <div class="navi-cate">
                 <div class="cate-right">
                   <ul class="depth-top">
                     <li>
@@ -312,13 +318,13 @@
                     </li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </li>
-            <li><a href="#event">이벤트</a></li>
-            <li><a href="#popular">인기</a></li>
+            <li><a href="index.html#event">이벤트</a></li>
+            <li><a href="index.html#popular">인기</a></li>
             <!-- <li><a href="#">구독</a></li> -->
-            <li><a href="#brands">브랜드</a></li>
-            <li><a href="#review">리뷰</a></li>
+            <li><a href="index.html#brands">브랜드</a></li>
+            <li><a href="index.html#review">리뷰</a></li>
             <li><a href="about_us.html">소개</a></li>
             <li><a href="notice copy.html">공지사항</a></li>
           </ul>
@@ -362,12 +368,12 @@
         </div>
         <div class="header-bottom">
           <ul class="navi-bottom">
-            <li><a href="#" class="category-title">카테고리</a></li>
-            <li><a href="#event">이벤트</a></li>
-            <li><a href="#popular">인기</a></li>
+            <li><a href="index.html#material" class="category-title">카테고리</a></li>
+            <li><a href="index.html#event">이벤트</a></li>
+            <li><a href="index.html#popular">인기</a></li>
             <!-- <li><a href="#">구독</a></li> -->
-            <li><a href="#brands">브랜드</a></li>
-            <li><a href="#review">리뷰</a></li>
+            <li><a href="index.html#brands">브랜드</a></li>
+            <li><a href="index.html#review">리뷰</a></li>
             <li><a href="about_us.html">소개</a></li>
             <li><a href="notice copy.html">공지사항</a></li>
           </ul>
