--- a/detail-page.html
+++ b/detail-page.html
@@ -1,30 +1,192 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-   
-
-    <script src="js/detail.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 파비콘 -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon//favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16.png" />
+    <!-- <link rel="manifest" href="images/favicon//site.webmanifest" /> -->
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <!-- css -->
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <!-- js -->
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <script src="js/jquery-1.12.3.js"></script>
+    <!-- js -->
+    <script src="js/detail.js"></script>
+    <script src="js/popular_item.js"></script>
+    <script src="js/fix-btn.js"></script>
+    <script src="js/login.js"></script>
+    <!-- AOS.js -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>상품상세페이지</title>
   </head>
   <body>
+    <!-- 로그인 폼 -->
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <h2 style="font-size: 30px; text-align: center">로그인</h2>
+        <form id="loginForm">
+          <input type="text" id="userId" placeholder="아이디" required class="input-field" />
+          <input type="password" id="password" placeholder="비밀번호" required class="input-field" />
+          <div class="remember-me">
+            <input type="checkbox" id="rememberMe" />
+            <label for="rememberMe" style="font-size: 14px; margin-left: 5px">로그인 상태 유지</label>
+          </div>
+          <div class="button-group">
+            <button type="submit" class="login-button">로그인</button>
+            <div class="footer-links">
+              <a href="#" class="open-register">회원가입</a>
+              <span>|</span>
+              <a href="#">아이디/비밀번호 찾기</a>
+            </div>
+            <div class="divider txt_c">
+              <div class="border"></div>
+              <span>또는</span>
+              <div class="border right"></div>
+            </div>
+            <button type="button" class="social-login naver-login">네이버로 로그인</button>
+            <button type="button" class="social-login kakao-login">카카오톡으로 로그인</button>
+          </div>
+        </form>
+        <button class="close-btn">&times;</button>
+      </div>
+    </div>
+    <!-- 가입유형 -->
+    <div id="userTypeModal" class="modal">
+      <div class="modal-content">
+        <h2 style="font-size: 30px; text-align: center">가입 유형 선택</h2>
+        <div class="user-type">
+          <button type="button" class="user-type-btn individual">일반 회원</button>
+          <button type="button" class="user-type-btn business">사업자 회원</button>
+        </div>
+        <button class="close-btn">&times;</button>
+      </div>
+    </div>
+    <!-- 회원가입 폼 -->
+    <div id="registerModal" class="modal register-modal">
+      <div class="modal-content register-modal-content">
+        <h2>회원가입</h2>
+        <form id="registerForm">
+          <div class="selected-form">
+            <button type="button" class="register-button">ID/PW로 회원가입</button>
+          </div>
+          <div class="divider txt_c">
+            <div class="border"></div>
+            <span>또는</span>
+            <div class="border right"></div>
+          </div>
+          <button type="button" class="social-login naver-login">네이버로 시작하기</button>
+          <button type="button" class="social-login kakao-login">카카오로 시작하기</button>
+        </form>
+        <div class="footer-links">
+          <a href="#" class="open-login">로그인</a>
+        </div>
+        <button class="close-btn register-close-btn">&times;</button>
+      </div>
+    </div>
+    <!-- 약관 동의 폼 -->
+    <div id="termsModal" class="modal terms-modal">
+      <div class="modal-content terms-modal-content">
+        <h2>약관 동의</h2>
+        <form id="termsForm">
+          <div class="terms-checkbox">
+            <input type="checkbox" id="termsAgree" required />
+            <label for="termsAgree">약관에 동의합니다.</label>
+          </div>
+          <div class="terms-content">
+            <h3>서비스 이용 약관</h3>
+            <p>서비스 이용 약관 내용이 여기에 표시됩니다. 내용을 읽고 동의해 주세요.</p>
+            <h3>개인정보 처리 방침</h3>
+            <p>개인정보 처리 방침 내용이 여기에 표시됩니다. 내용을 읽고 동의해 주세요.</p>
+          </div>
+          <div class="button-group">
+            <button type="submit" class="terms-submit-button">회원가입</button>
+            <button type="button" class="close-btn terms-close-btn">&times;</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- ID/PW 회원가입 폼 -->
+    <div id="signupModal" class="modal">
+      <div class="modal-content">
+        <h2 style="font-size: 30px; text-align: center">회원가입</h2>
+        <form id="signupForm">
+          <input type="text" name="userId" id="signupId" placeholder="아이디" required class="input-field" />
+          <input type="email" name="userEmail" id="signupEmail" placeholder="이메일" required class="input-field" />
+          <input type="password" name="passWord" id="signupPassword" placeholder="비밀번호" required class="input-field" />
+          <input type="tel" name="userPhone" id="signupPhone" placeholder="휴대폰 번호" required class="input-field" />
+          <button type="submit" class="signup-button">회원가입</button>
+          <button type="button" class="close-btn">&times;</button>
+        </form>
+      </div>
+    </div>
+    <!-- 로그인 알림 팝업 -->
+    <div id="loginAlert" class="coupon-alert fade-out">
+      <p>이미 로그인이 되어 있습니다.</p>
+      <button class="close-alert-btn">&times;</button>
+    </div>
+    <!-- 로그인 환영 팝업 -->
+    <div id="welcomePopup">
+      <div id="welcomeMessage"></div>
+      <button class="logout-button">로그아웃</button>
+      <span class="close-popup" style="cursor: pointer; float: right; font-size: 20px">×</span>
+      <!-- X 버튼 추가 -->
+    </div>
+    <!-- 알림 메시지 -->
+    <div id="notification" style="display: none">상품이 장바구니에 추가되었습니다!</div>
+    <!-- 로그인알림메시지 -->
+    <div id="loginNotification"></div>
     <!-- 장바구니 고정 버튼 -->
     <div class="cart-btn fixBtn">
       <a href="#">
         <img src="images/btn/cart_btn.png" alt="구매하기 고정버튼" class="fix-btn-img" />
         <img src="images/btn/cart_hover_btn.png" alt="구매하기 고정버튼 호버" class="fix-btn-img-hover" />
+        <span id="cartCount" class="cart-count">0</span>
+        <!-- 카운터 추가 -->
       </a>
     </div>
+    <!-- 장바구니 팝업 -->
+    <div id="cartPopup" class="cart-popup" style="display: none">
+      <div class="popup-content">
+        <h2>장바구니 내용</h2>
+        <ul id="cartItemsList"></ul>
+        <button onclick="closeCartPopup()" class="popclose"></button>
+        <!-- 클로즈 버튼 추가 -->
+      </div>
+    </div>
+    <!-- 로그인 버튼 -->
+    <div class="fixed-buttons login-btn">
+      <div class="loginBt">
+        <a href="#">
+          <img src="images/btn/user-login.png" alt="유저 아이콘" />
+        </a>
+      </div>
+      <div class="loginBt_my">
+        <a href="#">
+          <img src="images/btn/user-my.png" alt="유저 마이 아이콘" />
+        </a>
+      </div>
+    </div>
     <!-- CS버튼 -->
-    <div class="cs-btn fixBtn">
+    <div class="cs-btn fixBtn" tabindex="0">
       <img src="images/btn/cs_btn.png" alt="고객센터" class="cs-btn-img" />
+      <div class="social-icons" role="menu" aria-hidden="true" style="display: none">
+        <!-- 초기 상태를 숨김으로 설정 -->
+        <img src="images/btn/kakaotalk.png" alt="카카오톡" class="social-icon kakao-btn-img" tabindex="0" />
+        <img src="images/btn/naver_talk_icon_green.png" alt="네이버" class="social-icon naver-btn-img" tabindex="0" />
+      </div>
     </div>
     <!-- Top 버튼 -->
     <div class="top-btn fixBtn">
       <img src="images/btn/top_btn.png" alt="탑버튼" class="top-btn-img" />
     </div>
-
     <div class="wrap">
       <!-- 헤더 영역 -->
       <header class="header">
@@ -35,31 +197,31 @@
                 <div class="cate-right">
                   <ul class="depth-top">
                     <li>
-                      <a href="#">
+                      <a href="#" data-category="plastic">
                         <img src="images/A/icon/submenu-icon/plastic.png" alt="소재_플라스틱 아이콘" />
                         <span>플라스틱</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" data-category="clothes">
                         <img src="images/A/icon/submenu-icon/clothes.png" alt="소재_천 아이콘" />
                         <span>천</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" data-category="wood">
                         <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" />
                         <span>목재</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" data-category="glass">
                         <img src="images/A/icon/submenu-icon/glass.png" alt="소재_유리 아이콘" />
                         <span>유리</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" data-category="etc">
                         <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" />
                         <span>기타</span>
                       </a>
@@ -84,18 +246,17 @@
                               <img src="images/A/icon/popup-icon/serach_bar.svg" alt="서치 아이콘" class="search_icon" />
                             </a>
                           </div>
-                          <div class="loginBt">
-                            <a href="#">
-                              <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
-                              <!-- <span>로그인</span> -->
-                            </a>
-                          </div>
-                          <div class="cartBt">
-                            <a href="#">
-                              <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
-                              <!-- <span>카트</span> -->
-                            </a>
-                          </div>
+                          <!-- <div class="loginBt">
+                          <a href="#">
+                            <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
+                            
+                          </a>
+                        </div> -->
+                          <!-- <div class="cartBt">
+                          <a href="#">
+                            <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
+                          </a>
+                        </div> -->
                         </div>
                         <input type="text" placeholder="입력 후 엔터" />
                       </div>
@@ -107,36 +268,36 @@
                         <!-- <li><a href="notice.html">공지사항</a></li> -->
                       </ul>
                     </div>
-                    <hr />
+                    <!-- <hr /> -->
                     <div class="side-bottom">
                       <h3 class="side-bottom-title">카테고리</h3>
                       <ul class="side-bottom-menu">
                         <li>
-                          <a href="#">
+                          <a href="#" data-category="plastic">
                             <img src="images/A/icon/submenu-icon/plastic.png" alt="소재_플라스틱 아이콘" />
                             <span>플라스틱</span>
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="#" data-category="clothes">
                             <img src="images/A/icon/submenu-icon/clothes.png" alt="소재_천 아이콘" />
                             <span>천</span>
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="#" data-category="wood">
                             <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" />
                             <span>목재</span>
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="#" data-category="glass">
                             <img src="images/A/icon/submenu-icon/glass.png" alt="소재_유리 아이콘" />
                             <span>유리</span>
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="#" data-category="etc">
                             <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" />
                             <span>기타</span>
                           </a>
@@ -190,8 +351,8 @@
               <!-- <li><a href="#">구독</a></li> -->
               <li><a href="#brands">브랜드</a></li>
               <li><a href="#review">리뷰</a></li>
-              <li><a href="#">소개</a></li>
-              <li><a href="notice.html">공지사항</a></li>
+              <li><a href="about_us.html">소개</a></li>
+              <li><a href="notice copy.html">공지사항</a></li>
             </ul>
             <div class="head-logo">
               <a href="index.html">
@@ -200,8 +361,8 @@
             </div>
             <div class="header-right">
               <div class="head-search">
-                <input type="text" placeholder="검색어를 입력해주세요" />
-                <a href="#">
+                <input type="text" placeholder="검색어를 입력해주세요" id="searchInput" />
+                <a href="#" id="searchBtn">
                   <img src="images/A/icon/popup-icon/serach_bar.svg" alt="서치 아이콘" class="search_icon" />
                 </a>
               </div>
@@ -209,21 +370,24 @@
                 <div class="searchMB">
                   <a href="#">
                     <img src="images/A/icon/popup-icon/serach_bar.svg" alt="서치 아이콘" class="search_icon" />
-                    <input type="text" />
+                    <input type="text" id="searchMBInput" placeholder="모바일 검색어를 입력하세요" />
                   </a>
                 </div>
-                <div class="loginBt">
-                  <a href="#">
-                    <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
-                    <!-- <span>로그인</span> -->
-                  </a>
-                </div>
-                <div class="cartBt">
-                  <a href="#">
-                    <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
-                    <!-- <span>카트</span> -->
-                  </a>
-                </div>
+                <!-- <div class="loginBt">
+                <a href="#">
+                  <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
+                </a>
+              </div>
+              <div class="loginBt_my">
+                <a href="#">
+                  <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
+                </a>
+              </div> -->
+                <!-- <div class="cartBt">
+                <a href="#">
+                  <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
+                </a>
+              </div> -->
               </div>
             </div>
           </div>
@@ -235,8 +399,8 @@
               <!-- <li><a href="#">구독</a></li> -->
               <li><a href="#brands">브랜드</a></li>
               <li><a href="#review">리뷰</a></li>
-              <li><a href="#">소개</a></li>
-              <li><a href="notice.html">공지사항</a></li>
+              <li><a href="about_us.html">소개</a></li>
+              <li><a href="notice copy.html">공지사항</a></li>
             </ul>
           </div>
         </div>
@@ -282,12 +446,11 @@
           <!-- 브랜드 소개 탭 내용 -->
           <div class="detile-tab-content" id="detile-brand" style="display: none">
             <div class="detile-image-brand detile-card">
-              <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="detailImage" />
+              <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="brandImage" />
             </div>
           </div>
         </div>
       </section>
-
       <!-- 푸터 영역-->
       <footer class="footer">
         <div class="footer-container">
