--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
       <!-- 소재목록 슬라이드 -->
       <div class="material-slide-area">
         <div class="swiper swMaterial">
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper material-icon">
             <div class="swiper-slide">
               <a href="#">
                 <img src="images/A/icon/submenu-icon/plastic.svg" alt="plastic" />
