--- a/index.html
+++ b/index.html
@@ -265,31 +265,31 @@
               <div class="cate-right">
                 <ul class="depth-top">
                   <li>
-                    <a href="#" data-category="plastic">
+                    <a href="#material" data-category="plastic">
                       <img src="images/A/icon/submenu-icon/plastic.png" alt="소재_플라스틱 아이콘" />
                       <span>플라스틱</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="clothes">
+                    <a href="#material" data-category="clothes">
                       <img src="images/A/icon/submenu-icon/clothes.png" alt="소재_천 아이콘" />
                       <span>천</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="wood">
+                    <a href="#material" data-category="wood">
                       <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" />
                       <span>목재</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="glass">
+                    <a href="#material" data-category="glass">
                       <img src="images/A/icon/submenu-icon/glass.png" alt="소재_유리 아이콘" />
                       <span>유리</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" data-category="etc">
+                    <a href="#material" data-category="etc">
                       <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" />
                       <span>기타</span>
                     </a>
@@ -314,12 +314,16 @@
                             <img src="images/A/icon/popup-icon/serach_bar.svg" alt="서치 아이콘" class="search_icon" />
                           </a>
                         </div>
-                        <!-- <div class="loginBt">
+                        <div class="loginBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
-                            
                           </a>
-                        </div> -->
+                        </div>
+                        <div class="loginBt_my">
+                          <a href="#">
+                            <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
+                          </a>
+                        </div>
                         <!-- <div class="cartBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -333,10 +337,10 @@
                       <li><a href="#popular">인기</a></li>
                       <li><a href="#brands">브랜드</a></li>
                       <li><a href="#review">리뷰</a></li>
-                      <!-- <li><a href="notice.html">공지사항</a></li> -->
+                      <li><a href="about_us.html">소개</a></li>
+                      <li><a href="notice copy.html">공지사항</a></li>
                     </ul>
                   </div>
-                  <!-- <hr /> -->
                   <div class="side-bottom">
                     <h3 class="side-bottom-title">카테고리</h3>
                     <ul class="side-bottom-menu">
@@ -446,7 +450,7 @@
                   <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                 </a>
               </div>
-              <div class="loginBt_my">
+              <div class="loginBt_my" style="display: none;"> 
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                 </a>
@@ -483,16 +487,16 @@
                 <source src="/video/video1.mp4" type="video/mp4" />
               </video>
             </div>
+            <div class="swiper-slide white">
+              <video playsinline loop muted>
+                <source src="/video/video3.mp4" type="video/mp4" />
+              </video>
+            </div>
             <div class="swiper-slide mosgreen">
               <video playsinline loop muted>
                 <source src="/video/video2.mp4" type="video/mp4" />
               </video>
             </div>
-            <!-- <div class="swiper-slide white">
-                <video loop muted>
-                  <source src="/video/video3.mp4" type="video/mp4" />
-                </video>
-              </div> -->
           </div>
         </div>
       </div>
@@ -551,7 +555,7 @@
                 <div class="overlay">
                   <h3>바다 한 조각</h3>
                   <p>해변에서 주운 유리 조각을 <br />재료로 사용한 유리공예 상품</p>
-                  <li><a href="#">자세히 보기</a></li>
+                  <li><a href="detail-page.html">자세히 보기</a></li>
                 </div>
               </div>
               <div class="sub-images">
@@ -671,7 +675,7 @@
               </a>
             </div>
           </div>
-          <div class="material-main">
+          <div class="material-main" id="material">
             <!-- 플라스틱 소재 카테고리 -->
             <div class="material-goods plastic">
               <div class="material-goods-card">
@@ -852,7 +856,7 @@
                   <img src="images/material images/pd_img (28).png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
                     <p class="m_title">QUOTT</p>
-                    <p><레인보우 캘린더></p>
+                    <p>레인보우 캘린더</p>
                     <p><span class="price_bold">61,750원</span></p>
                     <div class="materal-rating">
                       <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
@@ -993,11 +997,6 @@
                 <a href="#">
                   <img src="images/material images/pd_img (19).png" alt="소재별 굿즈 02" />
                   <div class="materal-textbox">
-
-                    <p>ODD.TRAIN</p>
-                    <p>CALENDAR 2024</p>
-                    <p><span class="price_bold">56,000원</span></p>
-
                     <p class="m_title">달리즘</p>
                     <p>친환경 사이드 테이블</p>
                     <p><span class="price_bold">46,000원</span></p>
@@ -1054,6 +1053,7 @@
       <div class="show-more">
         <button id="showMoreButton">더 보기</button>
       </div>
+    
     </div>
     <!-- 인기 아이템 -->
     <section class="popular-items-section searchable" id="popular">
@@ -1193,10 +1193,14 @@
     <!-- 장바구니 팝업 -->
     <div id="cartPopup" class="cart-popup" style="display: none">
       <div class="popup-content">
+        <button onclick="closeCartPopup()" class="close-button">
+          <i class="fas fa-times"></i>
+          <!-- X 아이콘 -->
+        </button>
         <h2>장바구니 내용</h2>
         <ul id="cartItemsList"></ul>
-        <button onclick="closeCartPopup()" class="popclose">닫기</button>
-        <!-- 클로즈 버튼 추가 -->
+        <button onclick="purchaseItems()" class="popclose">구매하기</button>
+        <!-- 구매 버튼 -->
       </div>
     </div>
     <!-- 구독배너 -->
