--- a/notice copy.html
+++ b/notice copy.html
@@ -51,7 +51,7 @@
     <script src="js/modal.js"></script>
     <script src="js/fix-btn.js"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/header_aboutus.css" />
     <title>B안 공지 'JUNKY FUNKY!'</title>
     <style>
       html {
@@ -148,13 +148,6 @@
       #noticeList tr td:nth-child(2):hover {
         font-weight: bold;
       }
-
-      .navi-cate{
-        display: none !important;
-      }
-      .navi-cate.active{
-        display: none !important;
-      }
     </style>
   </head>
   <body>
@@ -163,8 +156,8 @@
       <div class="container">
         <div class="header-top">
           <ul class="head-navi">
-            <div class="navi-cate">
-              <!-- <div class="cate-right">
+            <!-- <div class="navi-cate">
+              <div class="cate-right">
                 <ul class="depth-top">
                   <li>
                     <a href="#material" data-category="plastic">
@@ -197,8 +190,8 @@
                     </a>
                   </li>
                 </ul>
-              </div> -->
-            </div>
+              </div>
+            </div> -->
             <li>
               <button class="cate-close">X</button>
               <a href="#" id="category-icon">
@@ -223,9 +216,10 @@
                         </div>
                         <div class="loginBt_my">
                           <a href="#">
-                            <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
+                            <img src="images/A/icon/popup-icon/user_icon_my.png" alt="유저 아이콘" />
                           </a>
                         </div>
+
                         <!-- <div class="cartBt">
                           <a href="#">
                             <img src="images/A/icon/popup-icon/cart-icon.svg" alt="카트 아이콘" />
@@ -243,7 +237,7 @@
                       <li><a href="notice.html">공지사항</a></li>
                     </ul>
                   </div>
-                  <div class="side-bottom">
+                  <!-- <div class="side-bottom">
                     <h3 class="side-bottom-title">카테고리</h3>
                     <ul class="side-bottom-menu">
                       <li>
@@ -277,48 +271,12 @@
                         </a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </a>
             </li>
             <li>
-              <a href="index.html#material" class="category-title">카테고리</a>
-              <!-- <div class="navi-cate">
-                <div class="cate-right">
-                  <ul class="depth-top">
-                    <li>
-                      <a href="#">
-                        <img src="images/A/icon/submenu-icon/plastic.png" alt="소재_플라스틱 아이콘" />
-                        <span>플라스틱</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <img src="images/A/icon/submenu-icon/clothes.png" alt="소재_천 아이콘" />
-                        <span>천</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <img src="images/A/icon/submenu-icon/wood.png" alt="소재_목재 아이콘" />
-                        <span>목재</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <img src="images/A/icon/submenu-icon/glass.png" alt="소재_유리 아이콘" />
-                        <span>유리</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <img src="images/A/icon/submenu-icon/etc.png" alt="소재_기타 아이콘" />
-                        <span>기타</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div> -->
+              <a href="index.html#material">카테고리</a>
             </li>
             <li><a href="index.html#event">이벤트</a></li>
             <li><a href="index.html#popular">인기</a></li>
@@ -368,7 +326,7 @@
         </div>
         <div class="header-bottom">
           <ul class="navi-bottom">
-            <li><a href="index.html#material" class="category-title">카테고리</a></li>
+            <li><a href="index.html#material">카테고리</a></li>
             <li><a href="index.html#event">이벤트</a></li>
             <li><a href="index.html#popular">인기</a></li>
             <!-- <li><a href="#">구독</a></li> -->
@@ -383,7 +341,7 @@
     <section class="main">
       <div class="inner">
         <h1>NOTICE</h1>
-        <!-- <hr /> -->
+        <hr />
         <!-- 공지사항 게시판 -->
         <table class="notice-board">
           <!-- thead: 타이틀헤드, tr : 테이블 가로, td: 테이블 데이터 -->
