클래스명추가

--- a/index.html
+++ b/index.html
@@ -606,8 +606,8 @@
     <!-- 이벤트배너 -->
     <section class="event-banner-section">
       <div class="event-container">
-        <img src="images/B/e.banner/1920_e.banner.png" alt="1920_이벤트배너" class="ebanner-1920" />
-        <img src="images/B/e.banner/500_e.banner.png" alt="500_이벤트배너" class="ebanner-500" />
+        <img src="images/B/e.banner/1920_e.banner.png" alt="1920_이벤트배너" class="ebanner" id="ebanner-1920" />
+        <img src="images/B/e.banner/500_e.banner.png" alt="500_이벤트배너" class="ebanner" id="ebanner-500" />
       </div>
     </section>
     <!-- 배너 영역 -->
@@ -1209,8 +1209,8 @@
     <!-- 구독배너 -->
     <section class="sub-banner-section">
       <div class="sub-banner-container">
-        <img src="images/B/e.banner/1920_sub.banner.png" alt="1920 구독배너" class="sub-banner-1920" />
-        <img src="images/B/e.banner/400_sub.banner.png" alt="400 구독배너" class="sub-banner-400" />
+        <img src="images/B/e.banner/1920_sub.banner.png" alt="1920 구독배너"class="sub-banner" id="sub-banner-1920" />
+        <img src="images/B/e.banner/400_sub.banner.png" alt="400 구독배너" class="sub-banner" id="sub-banner-400" />
       </div>
     </section>
     <!-- 리뷰 영역 -->
