디테일 중복 코드 제거, 모달 수정, 로그인 아이콘 제거

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                   <input type="text" id="searchMBInput" placeholder="모바일 검색어를 입력하세요" />
                 </a>
               </div>
-              <div class="loginBt">
+              <!-- <div class="loginBt">
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user-icon.svg" alt="유저 아이콘" />
                 </a>
@@ -456,7 +456,7 @@
                 <a href="#">
                   <img src="images/A/icon/popup-icon/user_icon_my.svg" alt="유저 아이콘" />
                 </a>
-              </div>
+              </div> -->
 
               <!-- <div class="cartBt">
                 <a href="#">
