로그인 ga 클래스 추가

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="fixed-buttons login-btn">
       <div class="loginBt">
         <a href="#">
-          <img src="images/btn/user-login.png" alt="유저 아이콘" />
+          <img src="images/btn/user-login.png" alt="유저 아이콘" class="login-btn_img" />
         </a>
       </div>
       <div class="loginBt_my">
