ga 로그인 클래스 수정

--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
     <!-- 로그인 버튼 -->
     <div class="fixed-buttons login-btn">
       <div class="loginBt">
-        <a href="#">
-          <img src="images/btn/user-login.png" alt="유저 아이콘" class="login-btn_img" />
+        <a href="#" onclick="gtag('event', 'click', {'event_category': 'Button', 'event_label': 'Login Button'});">
+          <img src="images/btn/user-login.png" alt="유저 아이콘" class="loginbtn_img" />
         </a>
       </div>
       <div class="loginBt_my">
@@ -1056,7 +1056,6 @@
       <div class="show-more">
         <button id="showMoreButton">더 보기</button>
       </div>
-    
     </div>
     <!-- 인기 아이템 -->
     <section class="popular-items-section searchable" id="popular">
@@ -1209,7 +1208,7 @@
     <!-- 구독배너 -->
     <section class="sub-banner-section">
       <div class="sub-banner-container">
-        <img src="images/B/e.banner/1920_sub.banner.png" alt="1920 구독배너"class="sub-banner" id="sub-banner-1920" />
+        <img src="images/B/e.banner/1920_sub.banner.png" alt="1920 구독배너" class="sub-banner" id="sub-banner-1920" />
         <img src="images/B/e.banner/400_sub.banner.png" alt="400 구독배너" class="sub-banner" id="sub-banner-400" />
       </div>
     </section>
