--- a/about_us.html
+++ b/about_us.html
@@ -139,7 +139,7 @@
                         <input type="text" placeholder="입력 후 엔터" />
                       </div>
                       <ul class="side-top-menu">
-                        <li><a href="index.html#event">이벤트</a></li>
+                        <li><a href="index.html#eventbanner">이벤트</a></li>
                         <li><a href="index.html#popular">인기</a></li>
                         <li><a href="index.html#brands">브랜드</a></li>
                         <li><a href="index.html#review">리뷰</a></li>
